@@ -1,7 +1,14 @@
+SimpleComplex/Utils 1.x, 2017-08-24
+-----------------------------------
+- CliCommand 'silent' property, controlled by environment var
+  PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SILENT.
+- CLI environment general help/-y now list only first line of commands'
+  help text.
+
 SimpleComplex/Utils 1.x, 2017-08-23
 -----------------------------------
 - CLI commands support suppressing strict confirms by setting enviroment var
-  PHP_LIB_SIMPLECOMPLEX_UTILS_RISKY_COMMAND_SKIP_CONFIRM.
+  PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SKIP_CONFIRM.
 
 SimpleComplex/Utils 1.x, 2017-08-19
 -----------------------------------
